--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "restaurant-iteration",
-  "version": "1.1.0",
+  "name": "untitled",
+  "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot & nodemon ./server/server.js",
-    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack",
     "dev": "webpack serve"
   },
   "keywords": [],
@@ -30,13 +30,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "node": "^20.5.0",
-    "node-fetch": "^2.6.12",
-    "nodemon": "^3.0.1",
-    "pg": "^8.11.1",
-    "pg-format": "^1.0.4"
+    "react-router-dom": "^6.14.2"
   }
 }
